--- a/index.html
+++ b/index.html
@@ -534,6 +534,7 @@
             <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> Distributed By <a href="https://themewagon.com">ThemeWagon</a><!-- License information: https://untree.co/license/ -->
               <br/>
               A Free Onepage Bootstrap Template by <a href="https://untree.co/">Untree.co</a>. Under licensed <a href="https://untree.co/license/" taget="_blank">Creative Common Attribution 3.0</a></p>
+              <a href="Impressum.html">Impressum</a> 
           </div>
         </div>
       </div>
