--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <li><a href="#section-about" class="nav-link">Über Mich</a></li>
           <!--<li><a href="#section-testimonial" class="nav-link">Testimonial</a></li>-->
           <!--<li><a href="#section-blog" class="nav-link">Blog</a></li>-->
-          <li><a href="#section-contact" class="nav-link">Kontakt</a></li>
+          <!--<li><a href="#section-contact" class="nav-link">Kontakt</a></li>-->
         </ul>
         <ul class="social js-clone-nav">
           <li><a href="https://www.instagram.com/bienemaja_04?igsh=c3I4aTU0OXVsMGY3&utm_source=qr" target="_blank"><span class="icon-instagram"></span></a></li>
@@ -82,7 +82,7 @@
           <div class="col-md-7 text-center">
             <h1 class=" heading text-uppercase text-white" data-aos="fade-up">Xposures</h1>
             <p class="lead text-white mb-4" data-aos="fade-up" data-aos-delay="100">Beeindruckende Fotografien aus aller Welt</p>
-            <p data-aos="fade-up" data-aos-delay="100"><a href="#section-contact" class="btn btn-primary btn-md smoothscroll">Kontakt & Anfragen</a></p>
+            <!--<p data-aos="fade-up" data-aos-delay="100"><a href="#section-contact" class="btn btn-primary btn-md smoothscroll">Kontakt & Anfragen</a></p>-->
           </div>
         </div>
       </section>
@@ -297,7 +297,7 @@
                   <h2 class="">Hi Ich bin Maja</h2>
                   <p>Hobbyfotografin und Weltentdeckerin. Ich bin super gerne Unterwegs, wobei meine Kamera meine treueste Begleiterin ist.</p>
                   <p>Neben der Reisefotografie probiere ich mich aktuell viel mit Portraits aus und freue mich über jede Person die sich von mir fotografieren lässt.</p>
-                  <p>Meld dich also super gerne wenn du Lust auf ein Fotoshooting hast :)</p>
+                  <p>Meld dich also super gerne <a href="mailto:just.velt2411@gmail.com">hier </a> wenn du Lust auf ein Fotoshooting hast :)</p>
                   <!--<h3 class=" mt-5">Services</h3>
                   
                   <div class="d-block d-md-flex mt-5">
@@ -468,21 +468,21 @@
           </div>
         </section>-->
 
-        <section class="site-section" id="section-contact">
+        <!--<section class="site-section" id="section-contact">
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-md-8">
                 <h2 class=" mb-5 heading">Kontakt</h2>
 
-                <form action="https://formsubmit.co/just.velt2411@gmail.com" method="POST">
+                <form action="https://formsubmit.co/just.velt2411@gmail.com" method="POST">-->
                   <!-- Einstellungen -->
-                  <input type="hidden" name="_captcha" value="false">
-                  <input type="hidden" name="_subject" value="Neue Nachricht von deiner Website">
+                  <!--<input type="hidden" name="_captcha" value="false">
+                  <input type="hidden" name="_subject" value="Neue Nachricht von deiner Website">-->
                   <!-- <input type="hidden" name="_next" value="https://deine-seite.de/danke.html"> -->
 
 
 
-                  <div class="row form-group">
+                  <!--<div class="row form-group">
                     <div class="col-md-6 mb-3 mb-md-0">
                       <label class="" for="fname">Vorname</label>
                       <input type="text" id="fname" name="First name" class="form-control" required>
@@ -527,7 +527,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section>-->
 
         <div class="row justify-content-center">
           <div class="col-md-12 text-center py-5">
